# mldevops_exercise_fork

./: .gitignore  Dockerfile  ml_ann_introduction_v4.ipynb  pyproject.toml  script.py
